# seismic

./: .gitignore  CLAUDE.md  LICENSE  README.md  mise.toml  package.json  pitchfork.toml  stale-block-hash-investigation.md
.claude/skills/audit-commits/: SKILL.md
.claude/skills/audit-fix/: SKILL.md
.claude/skills/ssol-test-mirror/: SKILL.md
.claude/skills/ssolc-tests/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/actions/setup-sfoundry/: action.yml
.github/workflows/: ci-py-client.yml  client-py.yml  client-ts.yml  contracts.yml  docs.yml  mise.yml
clients/py/: .env.example  .gitignore  DEVELOPMENT.md  Makefile  README.md  TODO.md  ci.sh  pyproject.toml
clients/py/src/seismic_web3/: __init__.py  _constants.py  _types.py  chains.py  client.py  module.py  rpc.py  transaction_types.py
clients/py/src/seismic_web3/abis/: __init__.py  deposit_contract.py  directory.py  src20.py
clients/py/src/seismic_web3/contract/: __init__.py  abi.py  public.py  shielded.py
clients/py/src/seismic_web3/crypto/: __init__.py  aes.py  ecdh.py  nonce.py  secp.py
clients/py/src/seismic_web3/precompiles/: __init__.py  _base.py  aes.py  ecdh.py  hkdf.py  rng.py  secp256k1.py
clients/py/src/seismic_web3/src20/: __init__.py  crypto.py  directory.py  types.py  watch.py
clients/py/src/seismic_web3/transaction/: __init__.py  aead.py  eip712.py  metadata.py  send.py  serialize.py
clients/py/tests/: test_abi.py  test_chains.py  test_client.py  test_contract.py  test_crypto.py  test_deposit_helpers.py  test_eip712.py  test_encryption.py  test_module.py  test_placeholder.py  test_precompiles.py  test_public_contract.py  test_rpc.py  test_send.py  test_serialize.py  test_transaction_types.py  test_types.py
clients/py/tests/fixtures/: deposit_requests.json
clients/py/tests/integration/: conftest.py  contracts.py  test_client_factory.py  test_deposit_contract.py  test_directory.py  test_eip712.py  test_estimate_gas.py  test_namespace.py  test_precompiles.py  test_seismic_counter.py  test_smart_routing.py  test_src20_events.py  test_src20_token.py  test_transparent_counter.py
clients/py/tests/integration/artifacts/: mock_src20_events.json  seismic_counter.json  test_token.json  transparent_counter.json
clients/ts/: CLAUDE.md  README.md  bunfig.toml  eslint.config.cjs  mise.toml  package.json  tsconfig.base.json  tsconfig.json
clients/ts/docs/: package.json  tsconfig.json
contracts/: CLAUDE.md  Makefile  README.md  foundry.toml  mise.toml
contracts/artifacts/: Directory.json  Intelligence.json
contracts/script/: SeismicCounter.s.sol  TransparentCounter.s.sol  genesis-contracts.txt  sync-artifacts.sh
contracts/src/directory/: Directory.sol
contracts/src/examples/: SeismicCounter.sol  WrappedNativeTokenSrc20.sol
contracts/src/intelligence/: Intelligence.sol
contracts/src/seismic-std-lib/: CLAUDE.md  ProtocolParams.sol  SRC20.sol  SRC20Factory.sol  SRC20Multicall.sol  SRC20Token.sol  ShieldedDelegationAccount.sol
contracts/test/: BatchRead.t.sol  CryptoUtils.t.sol  DepositContract.t.sol  Directory.t.sol  DirectoryNonceReuse.t.sol  Intelligence.t.sol  IntelligenceZeroKeyLeak.t.sol  ProtocolParams.t.sol  SRC20.t.sol  SRC20Events.t.sol  SRC20Factory.t.sol  SeismicCounter.t.sol  ShieldedDelegationAccount.t.sol  TransparentCounter.t.sol  TxUtils.t.sol
contracts/test/utils/: MockSRC20.sol  MockSRC20Events.sol  TestToken.sol
docs/: README.md  SUMMARY.md  architecture.md  claude-code-setup.md  gitbook.md  glossary.md  key-schedule.md  language-and-vm.md  merge-conflict-resolution-notes.md  py-docs-contract-status.md  python-sdk-docs-status.md  repos.md  summary.md
docs/claude-code-integrations/: claude-code.md
docs/claude-code-integrations/claude.md-templates/: README.md  seismic-alloy.md  seismic-python.md
docs/clients/: overview.md  seismic-alloy-rust.md
docs/clients/seismic-python/: README.md
docs/getting-started/: development-toolkit.md  installation.md  quickstart.md
docs/gitbook/: README.md  SUMMARY.md
docs/reference/: architecture.md  language-and-vm.md  links-and-contact.md  migrating-from-ethereum.md  networks.md  repos.md
docs/the-case-for-seismic/: precompiles.md  seismic-transaction.md  use-cases.md
docs/tutorials/: devnet.md  table-of-contents.md
rpc-terminal/: index.html
workspace/: CLAUDE.workspace.md  cargo-local-patches.toml  check-cargo-patches.py  seismic.code-workspace
(+567 files in other folders)
