[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seismic-web3"
version = "0.1.1"
description = "Seismic Python SDK — web3.py extensions for the Seismic privacy-enabled EVM"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Seismic Systems" }]
keywords = ["seismic", "web3", "ethereum", "evm", "privacy", "blockchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "web3>=7.0,<8",
    "coincurve>=20.0",
    "cryptography>=43.0",
]

[project.urls]
Documentation = "https://docs.seismic.systems/clients/python"
Repository = "https://github.com/SeismicSystems/seismic"
Source = "https://github.com/SeismicSystems/seismic/tree/main/clients/py"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "ty>=0.0.1a1",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.0",
    "requests>=2.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations
    "PT",  # flake8-pytest-style
]
ignore = [
    "ANN401",  # allow Any in *args/**kwargs (needed for dynamic ABI args)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",  # don't require type annotations in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
strict_markers = true
markers = [
    "integration: requires a running seismic node",
]
filterwarnings = [
    # Upstream web3.py issues — not fixable on our side:
    # https://github.com/ethereum/web3.py/issues — web3 uses the legacy websockets API
    "ignore::DeprecationWarning:websockets.legacy",
    # https://github.com/ethereum/web3.py/issues — web3 passes deprecated param to aiohttp
    "ignore::DeprecationWarning:aiohttp.connector",
]
